--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <main class="container mx-auto py-16">
           <div class="flex flex-wrap">
             <div class="w-full md:w-1/2 px-4">
-              <h1 class="text-4xl font-bold mb-4"><span class="text-teal-400">Miliarslot77</span></h1>
+              <h1 class="text-4xl font-bold mb-4"><span class="text-teal-400">Asianbet88</span></h1>
               <h2 class="text-6xl font-bold mb-6" >Link Alternatif Login Slot Online Resmi Terpercaya.</h2>
               <p class="text-zinc-600 mb-6">Situs judi slot online resmi terpercaya ini menyediakan link alternatif login slot online yang dapat digunakan oleh pengguna untuk masuk ke dalam situs judi slot online secara aman dan terpercaya.</p>
               <div class="flex space-x-4">
@@ -163,7 +163,7 @@
             </div>
             <div class="w-full md:w-1/3 px-4 mb-8">
               <div class="bg-white rounded-lg shadow-lg p-6 text-center">
-                <img src="https://asianbet88-slot.com/image/logo.png" alt="Feature 3" class="mx-auto mb-4" height="150" width="150"/>
+                <img src="https://asianbet88-slot.com/image/logo-miliarslot77.png" alt="Feature 3" class="mx-auto mb-4" height="150" width="150"/>
                 <h3 class="text-xl font-bold mb-2"><a href="https://e3xn.short.gy/miliarslot77">Miliarslot77</a></h3>
                 <a href="https://e3y1.short.gy/daftar-slot77" class="bg-teal-400 text-white rounded-full px-6 py-2">DAFTAR</a>
                 <p class="text-zinc-600">Daftar sekarang untuk bermain slot online gacor di situs judi terpercaya. Nikmati keseruan dan kemenangan di setiap putaran!</p>
