--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
       
             <div class="w-full md:w-1/2 px-6 relative">
-              <img src="https://asianbet88-slot.com/image/img/3.png" alt="Person using E-Wallet" class="rounded-lg shadow-lg object-cover h-full w-full" style="aspect-ratio: 1/1;" />
+              <img src="https://asianbet88-slot.com/image/img/1.jpg" alt="Person using E-Wallet" class="rounded-lg shadow-lg object-cover h-full w-full" style="aspect-ratio: 1/1;" />
             </div>
           </div>
         </main>
